feat: categories and positions components

--- a/apps/app/src/app/app.component.html
+++ b/apps/app/src/app/app.component.html
@@ -6,6 +6,12 @@
         <a class="nav-link" routerLink="/users">Użytkownicy</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="/categories">Dyscypliny</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="/positions">Stanowiska</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="/teams">Zespoły</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
