feat: user create form completed

--- a/apps/app/src/app/users/users.component.html
+++ b/apps/app/src/app/users/users.component.html
@@ -33,6 +33,19 @@
         </select>
       </div>
     </div>
+    <div class="col-3">
+      <div class="form-group">
+        <select formControlName="positionId" class="custom-select">
+          <option [value]="''" selected disabled>Wybierz stanowisko</option>
+          <option
+            *ngFor="let position of positions$ | async"
+            [value]="position.positionId"
+          >
+            {{ position.name }}
+          </option>
+        </select>
+      </div>
+    </div>
     <div class="col-1">
       <button
         [disabled]="formGroup.invalid"
