--- a/apps/app/src/app/users/users.component.html
+++ b/apps/app/src/app/users/users.component.html
@@ -26,7 +26,7 @@
           <option [value]="''" selected disabled>Wybierz dyscyplinę</option>
           <option
             *ngFor="let category of categories$ | async"
-            [value]="category.categoryId"
+            [value]="category.id"
           >
             {{ category.name }}
           </option>
@@ -39,7 +39,7 @@
           <option [value]="''" selected disabled>Wybierz stanowisko</option>
           <option
             *ngFor="let position of positions$ | async"
-            [value]="position.positionId"
+            [value]="position.id"
           >
             {{ position.name }}
           </option>
@@ -75,8 +75,8 @@
       <tr *ngFor="let user of data.users">
         <td>{{ user.firstName }}</td>
         <td>{{ user.lastName }}</td>
-        <td>{{ user?.category }}</td>
-        <td>{{ user?.position }}</td>
+        <td>{{ user?.category.name }}</td>
+        <td>{{ user?.position.name }}</td>
         <td>
           <button
             (click)="deleteUser(user.userId)"
