--- a/apps/app/src/app/positions/positions.component.html
+++ b/apps/app/src/app/positions/positions.component.html
@@ -38,7 +38,7 @@
         <td>{{ entity.name }}</td>
         <td>
           <button
-            (click)="delete(entity.categoryId)"
+            (click)="delete(entity.id)"
             type="button"
             class="btn btn-danger"
           >
