--- a/apps/app/src/app/users/users.component.html
+++ b/apps/app/src/app/users/users.component.html
@@ -79,7 +79,7 @@
         <td>{{ user?.position.name }}</td>
         <td>
           <button
-            (click)="deleteUser(user.userId)"
+            (click)="deleteUser(user.id)"
             type="button"
             class="btn btn-danger"
           >
